# sitop-loxone-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-05-24-healthcheck.md
docs/superpowers/specs/: 2026-05-24-healthcheck-design.md
scripts/: discover_nodes.py  list_endpoints.py
src/sitop_loxone_bridge/: __init__.py  __main__.py  app_config.py  bridge.py  config.py  healthcheck.py  log_capture.py  loxone_export.py  loxone_writer.py  opcua_discovery.py  opcua_reader.py  runtime_state.py  selection.py
src/sitop_loxone_bridge/web/: api.py  app.py  pages.py
src/sitop_loxone_bridge/web/static/: app.css
src/sitop_loxone_bridge/web/templates/: base.html  config.html  dashboard.html  loxone_template.xml.j2
tests/: conftest.py  test_app_config.py  test_config.py  test_healthcheck.py  test_log_capture.py  test_loxone_export.py  test_loxone_writer.py  test_opcua_reader_derived.py  test_runtime_state.py  test_selection.py  test_web_api.py
